force-app/main/default/objects/Exception_Log__c/fields/Error_Support_Data__c.field-meta.xml
<CustomField>
    <fullName>Error_Support_Data__c</fullName>
    <label>Error Support Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>