force-app/main/default/objects/Exception_Log__c/fields/Exception_Running_User__c.field-meta.xml
<CustomField>
    <fullName>Exception_Running_User__c</fullName>
    <label>Exception Running User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>