force-app/main/default/objects/Exception_Log__c/fields/Salesforce_Limits__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Limits__c</fullName>
    <label>Salesforce Limits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>